--- a/charts_common/pubspec.yaml
+++ b/charts_common/pubspec.yaml
@@ -1,6 +1,7 @@
 name: charts_common
 version: 0.12.0
 description: A common library for charting packages.
+author: Charts Team <charts_flutter@google.com>
 homepage: https://github.com/google/charts
 
 environment:
@@ -9,7 +10,7 @@ environment:
 dependencies:
   collection: ^1.14.5
   intl: ">=0.15.2 < 0.18.0"
-  logging: ^1.0.2
+  logging: any
   meta: ^1.1.1
   vector_math: ^2.0.8
 
