--- a/charts_flutter/example/pubspec.yaml
+++ b/charts_flutter/example/pubspec.yaml
@@ -1,8 +1,8 @@
 name: example
 description: Charts-Flutter Demo
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: '>=2.5.0'
+  sdk: '>=2.12.0'
+  flutter: '>=3.0.0'
 
 dependencies:
   charts_flutter:
